add a test case for Array.prototype.$swap

--- a/test/index.html
+++ b/test/index.html
@@ -9,11 +9,9 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="lib/qunit.js"></script>
-  <script>
-    QUnit.test( "a basic test example", function( assert ) {
-      var value = "hello";
-      assert.equal( value, "hello", "We expect value to be hello" );
-    });
-  </script>
+  <script src="../cherry.js"></script>
+
+  <!-- Test cases -->
+  <script src="testcase/Array.prototype.js"></script>
 </body>
 </html>
