--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>QUnit basic example</title>
+  <title>Unit Test for Cherry.js</title>
   <link rel="stylesheet" href="lib/qunit.css">
 </head>
 <body>
