add object test cases

--- a/test/index.html
+++ b/test/index.html
@@ -13,5 +13,6 @@
 
   <!-- Test cases -->
   <script src="testcase/Array.prototype.js"></script>
+  <script src="testcase/Object.prototype.js"></script>
 </body>
 </html>
