add string test cases

--- a/test/index.html
+++ b/test/index.html
@@ -14,5 +14,6 @@
   <!-- Test cases -->
   <script src="testcase/Array.prototype.js"></script>
   <script src="testcase/Object.prototype.js"></script>
+  <script src="testcase/String.prototype.js"></script>
 </body>
 </html>
