--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="lib/qunit.js"></script>
-  <script src="../cherry.min.js"></script>
+  <script src="../cherry.js"></script>
 
   <!-- Test cases -->
   <script src="testcase/Array.prototype.js"></script>
